Issue: 2

Type.: Change
File.: Host
Desc.: Renamed option --gpu-devices to --opencl-devices
Issue: 2

Type.: Bug
File.: Host
Desc.: Fixed a bug in combination of --restore and a user immediately aborting the session after restart
Trac.: 684

Type.: Bug
File.: Kernel
Desc.: Fix a bug in the implementation of GOST R 34.11-94, zero length passwords were not cracked

Type.: Bug
File.: Host
Desc.: Forced default iteration count for -m 2100 = DCC2 hashes to 10240

* changes v2.00 -> v2.01:

Type.: Bug
File.: Host
Desc.: Fix for a cuMemsetD8() 1 error in attacks different from mask attacks
Issue: 1

* changes v1.37 -> v2.00:

Type: Project
File: All
Desc: Made the project Open-Source

Type: Project
File: All
Desc: Switched the license to MIT

Type: Feature
File: Host
Desc: Removed Timebomb-, Beta- and Keyfile- checks

Type: Driver
File: Host
Desc: Added support for AMD APP SDK v3.0 GA

Type: Driver
File: Host
Desc: Added support for AMD ADL 8.0

Type: Driver
File: Host
Desc: added support for NV CUDA 7.5

Type: Feature
File: Host
Desc: Replaced support for NVAPI with support for its successor GDK, starting with version 352.55

Type: Driver
File: Host
Desc: Added support for all AMD Fiji based GPU (Fury)
Trac: 677

Type: Change
File: Kernel
Desc: Bitsliced mode -m 1500 = crypt, DES(Unix), Traditional DES in mask mode

Type: Change
File: Kernel
Desc: Bitsliced mode -m 3000 = LM in mask mode

Type: Feature
File: Kernel
Desc: Added new hash mode -m 12700 = Blockchain, My Wallet
Trac: 645

Type: Feature
File: Kernel
Desc: Added new hash mode -m 12800 = MS-AzureSync PBKDF2-HMAC-SHA256
Trac: 669

Type: Feature
File: Kernel
Desc: Added new hash mode -m 6211 = TrueCrypt 5.0+ PBKDF2-HMAC-RipeMD160 + XTS  512 bit
Desc: Added new hash mode -m 6212 = TrueCrypt 5.0+ PBKDF2-HMAC-RipeMD160 + XTS 1024 bit
Desc: Added new hash mode -m 6213 = TrueCrypt 5.0+ PBKDF2-HMAC-RipeMD160 + XTS 1536 bit
Desc: Added new hash mode -m 6221 = TrueCrypt 5.0+ PBKDF2-HMAC-SHA512    + XTS  512 bit